# RepostBot

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.TXT  README-dev.md  README.md  RepostBot.pro  Runner.cpp  Runner.h  Storage.cpp  Storage.h  json.hpp  main.cpp  vars.h.example  vars_defaults.h
apis/: TelegramApi.cpp  TelegramApi.h  VkApi.cpp  VkApi.h
apis/bots/: TelegramBot.cpp  TelegramBot.h
apis/handlers/: TelegramHandler.cpp  TelegramHandler.h  VkHandler.cpp  VkHandler.h
apis/handlers/vk/: VkAuth.cpp  VkAuth.h
exports/: ETelegram.cpp  ETelegram.h
imports/: IVk.cpp  IVk.h
interfaces/: Bot.h  Exporter.h  Importer.h  Model.cpp  Model.h  Task.h  Threadable.h  User.h
models/: Attachment.cpp  Attachment.h  Error.cpp  Error.h  Post.cpp  Post.h  Posts.h  ReplyModel.h  Status.cpp  Status.h
queue/: QueueHandler.cpp  QueueHandler.h  QueueManager.cpp  QueueManager.h  QueueTask.cpp  QueueTask.h
tasks/: TaskManager.cpp  TaskManager.h
tasks/vk/: PostsVkTask.cpp  PostsVkTask.h
tests/: ModelsTest.cpp  TestAttachment.cpp  TestAttachment.h  TestCase.h  TestHelper.cpp  TestHelper.h  TestQueue1.h  TestUtils.cpp  TestUtils.h  UtilsTest.cpp  main.cpp
tests/apis/: VkApiTest.cpp
tests/helpers/: QueueHelper.cpp  QueueHelper.h
tests/queue/: QueueHelper.cpp  QueueHelper.h  QueueTest.cpp  TestQueue1.cpp  TestQueue2.cpp  TestQueue2.h
utils/: Curl.cpp  Curl.h  Singleton.h  USingleton.h  Utils.cpp  Utils.h  Zip.cpp  Zip.h
utils/concurrent/: UFuture.h
utils/logs/: Logger.cpp  Logger.h
